.. -*- mode: rst -*-
.. This text is in reStucturedText format, so it may look a bit odd.
.. See http://docutils.sourceforge.net/rst.html for details.

===================
GraphicsMagick News
===================

This file was last updated on September 8, 2012

Please note that this file records news for the associated development
branch and that each development branch has its own NEWS file. See the
ChangeLog file for full details.

.. contents::
  :local:

1.3.17 (TBD)
==========================

Security Fixes:

  * PNG: Fix for CVE-2012-3438. The Magick_png_malloc function in
    coders/png.c in GraphicsMagick 6.7.8-6 does not use the proper
    variable type for the allocation size, which might allow remote
    attackers to cause a denial of service (crash) via a crafted PNG
    file that triggers incorrect memory allocation.

  * Automake (derived): Fix for CVE-2012-3386: The "make distcheck"
    rule in GNU Automake before 1.11.6 and 1.12.x before 1.12.2 grants
    world-writable permissions to the extraction directory, which
    introduces a race condition that allows local users to execute
    arbitrary code via unspecified vectors.

Bug fixes:

  * PNG: Reading sub-8-bit palette images is fixed (images looked
    stretched).

  * SVG: Fixed bug which allowed MVG and SVG files with long vector
    paths to crash the software.

  * SVG: Ignore XML headers rather than rendering them as text.

  * MVG/SVG/WMF/-draw: It is now possible to draw a plain ','
    character.

  * WMF: Fixed a bug which caused wrong centered-text placement.

  * import: Return status was inverted.

  * configure: Don't force that liblzma is used just because libtiff
    is used.

New Features:

  * The configure script now supports a --enable-quantum-library-names
    option to enable that shared library name includes quantum depth
    to allow shared libraries with different quantum depths to
    co-exist in same directory (only one can be used for development).
