@@ -39,7 +39,7 @@
 <!-- -*- mode: rst -*- -->
 <!-- This text is in reStucturedText format, so it may look a bit odd. -->
 <!-- See http://docutils.sourceforge.net/rst.html for details. -->
-<p>This file was last updated on September 8, 2012</p>
+<p>This file was last updated on September 29, 2012</p>
 <p>Please note that this file records news for the associated development
 branch and that each development branch has its own NEWS file. See the
 ChangeLog file for full details.</p>
@@ -138,7 +138,9 @@ failures.</p>
 <p>Windows Delegate Updates:</p>
 <blockquote>
 <ul class="simple">
-<li>None</li>
+<li>Libtiff is updated to the 4.0.3 release.</li>
+<li>Lcms2 is updated to the 2.4 release.</li>
+<li>Libpng is updated to the 1.5.13 release.</li>
 </ul>
 </blockquote>
 <p>Behavior Changes:</p>
